# DICOM-converter

./: .dockerignore  .gitignore  CHANGELOG.md  CITATION.cff  Dockerfile  LICENSE  README.md  Singularity.def  dicom_to_nifti.py  pyproject.toml
