[uild-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dicom-to-bids-nifti"
version = "1.0.0"
description = "Parallel DICOM to BIDS-style NIfTI converter with QC"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [ { name = "Evan Swofford" } ]
keywords = ["DICOM", "NIfTI", "BIDS", "medical-imaging", "MRI", "CT", "PET"]
classifiers = [ 
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    ]

dependencies = [
    "dicom2nifti>=2.4.0",
    "pydicom>=2.4.0",
    "nibabel>=5.2.0",
    "numpy>=1.23",
    ]

[project.optional-dependencies]
dev = ["pytest>=7", "ruff>=0.5", "black>=24"]

[project.scripts]
dicom-to-nifti = "dicom_to_nifti:main"

[tool.setuptools]
py-modules = ["dicom_to_nifti"]